packages/frontend/scss/_global.scss
* {
  box-sizing: border-box;
  font-variant-ligatures: none;
}

html {
  height: 100%;
}

body {
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  font-size: 14px;
  color: var(--globalText);
  background-color: var(--globalBackground);
  cursor: default;

  &:not(.system-fonts) {
    --font-family: #{$fonts-default};
    font-family: var(--font-family);
  }
  &.system-fonts {
    --font-family: #{$fonts-system};
    font-family: var(--font-family);
  }
}

ul {
  list-style: none;
  padding-left: 0;
}

h1,
h2,
h3,
h4,
h5,
p,
button > span,
label {
  user-select: none;
}

button {
  cursor: pointer;
  font-size: inherit;
  user-select: none;
}

a {
  color: var(--globalLinkColor);
}

.SelectGroupImage {
  width: 100px;
}

.GroupImage {
  width: 100px;
  height: 100px;
  cursor: pointer;
}

.RemoveGroupImage {
  width: 100px;
  margin-bottom: 4px;
}

$unread-badge-size: 21px;

// Let's not add `:not(:focus-visible)` since the blinking cursor
// might be enough, (or it might not, we'll see).
input:focus {
  outline: none;
}

input[type='text'],
input[type='search'],
textarea {
  &:active,
  &:focus {
    outline: 1px solid $color-global-textarea-outline;
  }
}

//yellow/blue border fix
button:focus:not(:focus-visible) {
  outline: none;
}

* {
  scrollbar-width: thin;
  scrollbar-color: var(--scrollbarThumb) var(--globalBackground);
}

::-webkit-scrollbar {
  width: 6px;
  height: 0;
}

::-webkit-scrollbar-track {
  background: var(--globalBackground);
}

::-webkit-scrollbar-thumb {
  background: var(--scrollbarThumb);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--scrollbarThumbHover);
}

::-webkit-scrollbar-corner {
  background: transparent;
}

code {
  background-color: rgba(0, 0, 0, 0.25);
  border-radius: 0.8pt;
  padding: 0.4pt 3pt;
}

.markdown-code {
  display: block;
  background-color: rgba(0, 0, 0, 0.25);
  border-radius: 3pt;
  padding: 3pt 4pt;
  border: 1pt rgba(0, 0, 0, 0.35) solid;
}

.markdown-code > code {
  background-color: none;
  border-radius: 0;
  padding: none;
}

.sharp-pixel-image {
  -ms-interpolation-mode: nearest-neighbor;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -webkit-crisp-edges;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  image-rendering: pixelated;
}

// toast for errors and success messages
.user-feedback {
  position: fixed;
  top: 60px;
  text-align: center;
  width: 100%;
  z-index: map-get($z-index, user-feedback);
  pointer-events: none;

  p {
    display: inline-block;
    text-align: center;
    font-style: italic;
    font-weight: bold;
    padding: 7px 14px;
    background-color: #696868;
    border-radius: 10px;
    color: white;
    font-size: medium;
    max-width: 90%;
    pointer-events: all;
  }
  &.error p {
    background-color: #b73a3a;
  }
  &.success p {
    background-color: #3ca26a;
  }
}

.crash-screen {
  padding: 10px;

  h1,
  h2,
  code,
  pre {
    user-select: text;
  }

  p {
    margin-top: 20px;
  }

  pre.error-details {
    background-color: rgba(177, 10, 10, 0.25);
    padding: 10px;
    overflow-x: scroll;
    font-family: monospace;
  }

  code {
    background-color: none;
  }
}

/* force usage of our emoji font in code blocks */
code,
kbd,
samp {
  font-family: monospace, $emojifonts;
}

.main-container-container {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  position: absolute;
}

.main-container {
  display: flex;
  flex-grow: 1;
  overflow: hidden;
}

.clickable {
  cursor: pointer;
}

